Day4-Terraform-Variables-and-Datasources/terraform-manifests/i3-ec2securitygroups.tf
# Create Security Group - SSH Traffic
resource "aws_security_group" "vpc_ssh" {
  name = "vpc_ssh"
  description = "DEV VPC SSH SG"
  ingress {
    from_port   = "22"
    to_port     = "22"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    "name"      = "vpc-ssh" 
  }
}
 #Create Security Group - web Traffic

resource "aws_security_group" "vpc_web" {
  name = "vpc_web"
  description = "DEV VPC WEB SG"
  ingress {
    from_port   = "80"
    to_port     = "80"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = "443"
    to_port     = "443"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    "name"      = "vpc-web"
  }
}
